--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <section id="contact" class="page-section">
     <div class="section-box">
       <h2>Contact Me</h2>
-      <p>Email: your-email@example.com</p>
+      <p>Email: shree.srivastava14@gmail.com</p>
     </div>
   </section>
 </body>
